update: refatoraçao dos repositorios e seus testes unitarios